# Markovsky

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  configure  configure.in  markovsky-irc.cfg  markovsky-irc.cpp  markovsky-irc.h  markovsky-linein.cpp  markovsky.cpp  markovsky.h  markovutil.cpp  markovutil.h
